--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.2.2",
+  "version": "0.0.0",
+  "workspaces": [
+    "packages/*"
+  ],
   "command": {
     "version": {
       "conventionalCommits": true,
