--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
+//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+registry=https://registry.npmjs.org/
+always-auth=true
 strict-peer-dependencies=false
 auto-install-peers=true
