--- a/packages/nx-templates/package.json
+++ b/packages/nx-templates/package.json
@@ -2,6 +2,11 @@
   "name": "@shepherd23/nx-templates",
   "private": false,
   "version": "0.0.5",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shepherd231/nx-plugins.git"
+  },
+  "homepage": "https://github.com/shepherd231/nx-plugins/tree/master/packages/nx-templates",
   "dependencies": {
     "@nx/devkit": "16.9.1",
     "tslib": "^2.3.0"
