--- a/packages/nx-preset-py-standalone/package.json
+++ b/packages/nx-preset-py-standalone/package.json
@@ -2,6 +2,7 @@
   "name": "@shepherd23/nx-preset-py-standalone",
   "private": false,
   "version": "0.0.2",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/shepherd231/nx-plugins.git"
