--- a/packages/nx-preset-ts-standalone/package.json
+++ b/packages/nx-preset-ts-standalone/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@shepherd23/nx-preset-ts-standalone",
   "private": false,
+  "license": "MIT",
   "version": "0.0.2",
   "repository": {
     "type": "git",
