--- a/packages/nx-preset-py-standalone/src/generators/preset/files/pyproject.toml.template
+++ b/packages/nx-preset-py-standalone/src/generators/preset/files/pyproject.toml.template
@@ -16,6 +16,8 @@ target-version = [ "py311",]
 include = "\\.pyi?$"
 extend-exclude = "/(\n  # The following are specific to Black, you probably don't want those.\n  tests/data\n  | profiling\n)/\n"
 
+[tool.poetry.dependencies]
+python = ">=3.11,<3.13"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
