--- a/packages/nx-preset-ts-monorepo/package.json
+++ b/packages/nx-preset-ts-monorepo/package.json
@@ -2,7 +2,13 @@
   "name": "@shepherd23/nx-preset-ts-monorepo",
   "private": false,
   "license": "MIT",
-  "version": "0.1.9",
+  "version": "0.0.7",
+  "scripts": {
+    "build": "nx run @shepherd23/nx-preset-ts-monorepo:build",
+    "test": "nx run @shepherd23/nx-preset-ts-monorepo:test",
+    "lint": "nx run @shepherd23/nx-preset-ts-monorepo:lint",
+    "publish": "nx run @shepherd23/nx-preset-ts-monorepo:publish"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/shepherd231/nx-plugins.git"
