--- a/packages/nx-preset-ts-monorepo/src/generators/preset/files/package.json.template
+++ b/packages/nx-preset-ts-monorepo/src/generators/preset/files/package.json.template
@@ -18,6 +18,15 @@
     "lerna": "^7.2.0",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@jest/types": "^29.6.3",
+    "@nx/jest": "^17.1.2",
+    "@nx/js": "17.1.2",
+    "jest-environment-jsdom": "^29.4.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   }
 }
