--- a/packages/nx-templates/src/generators/gh-actions-publish/files/.github/workflows/remove-tags.yaml.template
+++ b/packages/nx-templates/src/generators/gh-actions-publish/files/.github/workflows/remove-tags.yaml.template
@@ -27,19 +27,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Set-up git user
-      - name: Set-up git user
-        run: |
-          set -e
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
       # Sync the source to the latest commit
-      - name: Sync source
-        run: |
-          set -e
-          git fetch --unshallow
-          git pull
+      - uses: 01Joseph-Hwang10/gh-actions@sync-with-source
 
       # Remove tags
       - name: Remove tags if needed
