--- a/packages/nx-preset-py-standalone/src/generators/preset/files/pyproject.toml.template
+++ b/packages/nx-preset-py-standalone/src/generators/preset/files/pyproject.toml.template
@@ -26,3 +26,7 @@ pre-commit = "^3.4.0"
 commitizen = "^3.10.0"
 poethepoet = "^0.24.4"
 
+[tool.poetry.group.test.dependencies]
+faker = "^20.1.0"
+pytest = "^7.4.3"
+pytest-order = "^1.2.0"
