--- a/packages/nx-preset-ts-monorepo/src/generators/preset/files/package.json.template
+++ b/packages/nx-preset-ts-monorepo/src/generators/preset/files/package.json.template
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@shepherd23/nx-templates": "^0.6.0",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
@@ -14,14 +13,13 @@
     "eslint-plugin-jest": "^27.4.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
+    "nx": "16.8.1",
     "jest": "^29.7.0",
-    "lerna": "^7.2.0",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "typescript": "^5.2.2",
     "@jest/types": "^29.6.3",
     "@nx/jest": "^17.1.2",
-    "@nx/js": "17.1.2",
     "jest-environment-jsdom": "^29.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1"
