--- a/packages/nx-preset-ts-monorepo/project.json
+++ b/packages/nx-preset-ts-monorepo/project.json
@@ -15,6 +15,7 @@
         "tsConfig": "packages/nx-preset-ts-monorepo/tsconfig.lib.json",
         "assets": [
           "packages/nx-preset-ts-monorepo/*.md",
+          "packages/nx-preset-ts-monorepo/.npmrc",
           {
             "input": "./packages/nx-preset-ts-monorepo/src",
             "glob": "**/!(*.ts)",
@@ -70,7 +71,8 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "tools/scripts/publish.sh dist/packages/nx-preset-ts-monorepo"
+        "command": "pnpm publish --no-git-checks || echo 'Already published: nx-preset-ts-monorepo'",
+        "cwd": "dist/packages/nx-preset-ts-monorepo"
       },
       "dependsOn": [
         "build"
