--- a/.github/workflows/release-and-publish.yml
+++ b/.github/workflows/release-and-publish.yml
@@ -22,29 +22,29 @@ jobs:
 
       # Checkout
       - uses: actions/checkout@v4
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
         with:
           ref: ${{ github.event.after }}
 
       # Setup pnpm
       - uses: pnpm/action-setup@v2
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
         with:
           version: 8
 
       # Setup node
       - uses: actions/setup-node@v3
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
         with:
           node-version: 16
           cache: 'pnpm'
 
       # Install dependencies
       - run: HUSKY=0 pnpm install --prod --frozen-lockfile
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
 
       # Publish packages
       - run: pnpm nx run-many -t publish
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
