--- a/packages/nx-preset-ts-monorepo/src/generators/preset/files/.github/workflows/release.yml.template
+++ b/packages/nx-preset-ts-monorepo/src/generators/preset/files/.github/workflows/release.yml.template
@@ -13,7 +13,9 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     outputs:
-      release_created: ${{ steps.release.outputs.release_created }}
+      # Note that this value is stringified boolean value,
+      # not an actual boolean value. (i.e. "true" or "false")
+      releases_created: ${{ steps.release.outputs.releases_created }}
     steps:
       - uses: google-github-actions/release-please-action@v4
         id: release
