--- a/packages/nx-preset-ts-standalone/src/generators/preset/files/.github/workflows/release.yml.template
+++ b/packages/nx-preset-ts-standalone/src/generators/preset/files/.github/workflows/release.yml.template
@@ -13,6 +13,8 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     outputs:
+      # Note that this value is stringified boolean value,
+      # not an actual boolean value. (i.e. "true" or "false")
       release_created: ${{ steps.release.outputs.release_created }}
     steps:
       - uses: google-github-actions/release-please-action@v4
