--- a/packages/nx-templates/src/generators/http-client-js/files/tsconfig.spec.json.template
+++ b/packages/nx-templates/src/generators/http-client-js/files/tsconfig.spec.json.template
@@ -1,12 +1,14 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "<%= repoRoot %>/dist/out-tsc",
     "module": "commonjs",
     "types": [
       "jest",
       "node"
-    ]
+    ],
+    "esModuleInterop": true,
+    "allowJs": true
   },
   "include": [
     "jest.config.ts",
