--- a/packages/nx-templates/package.json
+++ b/packages/nx-templates/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nx/devkit": "16.9.1",
     "case": "^1.6.3",
+    "toml": "^3.0.0",
     "tslib": "^2.3.0"
   },
   "type": "commonjs",
