--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@nx/jest": "16.9.1",
     "@nx/linter": "16.9.1",
     "@nx/plugin": "^16.9.1",
-    "@swc-node/register": "~1.4.2",
+    "@swc-node/register": "^1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
