--- a/packages/nx-templates/package.json
+++ b/packages/nx-templates/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@nx/devkit": "16.9.1",
     "case": "^1.6.3",
-    "toml": "^3.0.0",
     "tslib": "^2.3.0"
   },
   "type": "commonjs",
@@ -20,5 +19,8 @@
   "generators": "./generators.json",
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@types/iarna__toml": "^2.0.5"
   }
 }
